# cs4076-project

./: CMakeLists.txt  CMakeLists.txt.user.ce533b0  CMakeLists.txt.user.ded60f9  README.md  csvhandler.cpp  csvhandler.h  customexception.cpp  customexception.h  ingredient.cpp  ingredient.h  ingredientamount.cpp  ingredientamount.h  ingredients.csv  liquid.cpp  liquid.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  popup.ui  recipe.cpp  recipe.h  recipes.csv  solid.cpp  solid.h  todo.txt
